# python-project-49

./: .codeclimate.yml  README.md  brain-prime.cast  brain-progression.cast  demo.cast  hexlet-code  pyproject.toml
brain_games/: cli.py  game_logic.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
